ui/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: lamassu-ui
  namespace: lamassu-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lamassu-ui
  template:
    metadata:
      labels:
        app: lamassu-ui
    spec:
      containers:
        - name: ui
          image: haritz/lamassu-ui:1.0
          imagePullPolicy: Always
          ports:
          - containerPort: 3000
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
