ui/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: lamassu-ns
  name: lamassu-ui
spec:
  type: ClusterIP
  selector:
    app: lamassu-ui
  ports:
    - name: frontend-3000
      protocol: TCP
      port: 3000
