ui/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: lamassu-ui-ingress
  namespace: lamassu-ns
  annotations: 
    cert-manager.io/issuer:  "lamassu-ca-issuer"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dev.lamassu.io
    secretName: lamassu-ingress-tls
  rules:
  - host: dev.lamassu.io
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: lamassu-ui
            port:
              number: 3000
